# ansible-playbooks

./: .pre-commit-config.yaml  Makefile  README.md  charon_test.yml  dev-requirements.txt  inventory.yml  pass.yml  pre_tasks.yml  pyproject.toml  requirements.txt  requirements.yml  site.yml  sync_repo.sh  test.yml
group_vars/: all.yml  autonomylab.yml  ee.yml  gentoo.yml
inventory/: all.yml  autonomylab.yml  external.yml  firewalls.yml  ulab.yml
roles/charon-packages/handlers/: main.yml
roles/charon-packages/tasks/: main.yml
roles/common/res/: ulab.sh
roles/common/tasks/: Ubuntu.yml  main.yml
roles/common/vars/: Fedora.yml  Gentoo.yml  Ubuntu.yml  main.yml
roles/course/cs102/tasks/: main.yml
roles/course/cs102/vars/: Ubuntu.yml  main.yml
roles/fs/auristorfs/res/: ansiblepam  krenew.sh
roles/fs/auristorfs/tasks/: main.yml
roles/fs/kafs/res/: ee.cooper.edu.conf  thiscell.conf
roles/fs/kafs/tasks/: main.yml
roles/fs/kafs/vars/: main.yml
roles/fs/nfs/defaults/: main.yml
roles/fs/nfs/tasks/: main.yml
roles/fs/nfs/vars/: main.yml
roles/install/format/defaults/: main.yml
roles/install/format/tasks/: main.yml
roles/install/partition/defaults/: main.yml
roles/install/partition/tasks/: main.yml
roles/net/firewall/tasks/: main.yml
roles/net/firewall/vars/: Gentoo.yml  main.yml
roles/net/firewalld/tasks/: main.yml
roles/net/ssh/defaults/: main.yml
roles/net/ssh/handlers/: main.yml
roles/net/ssh/tasks/: main.yml
roles/net/ssh/vars/: Gentoo.yml  Ubuntu.yml  main.yml
roles/orgs/mudbug/tasks/: main.yml
roles/pkg/can/tasks/: main.yml
roles/pkg/can/vars/: main.yml
roles/pkg/container/tasks/: main.yml
roles/pkg/container/vars/: main.yml
roles/pkg/editor/tasks/: main.yml
roles/pkg/editor/vars/: Gentoo.yml  main.yml
roles/repo/microsoft/tasks/: Debian.yml  RedHat.yml  main.yml
(+10 files in other folders)
